--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 * {
 
     margin: 0;
@@ -26,29 +27,36 @@ a, a:hover {
     color: inherit;
     text-decoration: none;
 }
+
 p {
     margin: 0;
 }
+
 img {
     max-width: 100%;
     height: auto;
 }
+
 body {
     overflow-x: hidden;
     font-weight: 400;
-    font-family: "Roboto",sans-serif;
+    font-family: "Roboto", sans-serif;
 }
+
 main {
     overflow-x: hidden;
 }
+
 /*visota styles start*/
 .header {
     position: relative;
     z-index: 10;
 }
+
 .header .container {
     padding: 0;
 }
+
 .header .header-top {
     padding: 15px 0 10px;
     display: -webkit-box;
@@ -318,6 +326,7 @@ main {
 .main-menu li.active a:before {
     height: 5px;
 }
+
 .btn {
     display: inline-block;
     vertical-align: top;
@@ -333,6 +342,7 @@ main {
     background: linear-gradient(to bottom, #f82880 0%, #d50656 99%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f82880', endColorstr='#d50656', GradientType=0);
 }
+
 .super-header {
     background: #F7F6FB;
     padding: 8px 0;
@@ -357,6 +367,7 @@ main {
     text-decoration: none;
     color: #282E44;
 }
+
 .comments {
     padding: 55px 0 45px 0;
     background: #F7F6FB;
@@ -383,16 +394,18 @@ main {
 
 /*visota styles end*/
 .container {
-        width: 1180px;
+    width: 1180px;
 }
+
 .section-title-wrap {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .section-title {
     font-size: 40px;
-    font-family: "BebasNeueBold",sans-serif;
+    font-family: "BebasNeueBold", sans-serif;
     color: #292e43;
     line-height: 42px;
     display: flex;
@@ -402,6 +415,7 @@ main {
     margin-bottom: 0;
     text-transform: uppercase;
 }
+
 .section-title:before {
     content: "";
     background-color: #292e43;
@@ -412,6 +426,7 @@ main {
     height: 1px;
     z-index: 78;
 }
+
 .section-title:after {
     content: "";
     background-color: #292e43;
@@ -422,6 +437,7 @@ main {
     height: 1px;
     z-index: 78;
 }
+
 .col-lg-1,
 .col-lg-2,
 .col-lg-3,
@@ -436,10 +452,11 @@ main {
 .col-lg-12 {
     padding: 0 10px;
 }
+
 #excursion .excursion-box .box-header {
     width: 100%;
     padding: 580px 0 50px 0;
-    background: url("../images/img1.png")no-repeat;
+    background: url("../images/img1.png") no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -447,9 +464,10 @@ main {
     justify-content: center;
     position: relative;
 }
-#excursion .excursion-box .box-header:after{
+
+#excursion .excursion-box .box-header:after {
     content: "";
-    background: url("../images/Rectangle 1 copy 3.png")no-repeat;
+    background: url("../images/Rectangle 1 copy 3.png") no-repeat;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -458,24 +476,28 @@ main {
     height: 100%;
     z-index: 1;
 }
+
 #excursion {
     padding-top: 80px;
 }
+
 #excursion .container {
     width: 100%;
     max-width: 100%;
     padding: 0;
 
 }
+
 #excursion .excursion-box .box-header .title {
     font-size: 28px;
     line-height: 80px;
     color: #fd227e;
     font-weight: 700;
-    text-transform: uppercase ;
+    text-transform: uppercase;
     letter-spacing: 8.4px;;
     z-index: 100;
 }
+
 #excursion .excursion-box .box-header .subtitle {
     font-family: "BebasNeueBold", sans-serif;
     font-size: 90px;
@@ -483,18 +505,22 @@ main {
     color: #ffffff;
     z-index: 100;
 }
+
 #excursion .excursion-box .box-body {
     padding: 50px 116px;
-    background:url("../images/img2.png")no-repeat;
+    background: url("../images/img2.png") no-repeat;
     background-size: cover;
 }
+
 #excursion .excursion-box .box-body .body_info {
     padding-bottom: 90px;
     border-bottom: 2px solid #4b5474;
 }
+
 #excursion .excursion-box .box-body .body_info {
     display: flex;
 }
+
 #excursion .excursion-box .box-body .body_info .title {
     font-size: 50px;
     line-height: 52px;
@@ -502,54 +528,67 @@ main {
     font-family: "BebasNeueBold", sans-serif;
     width: 38%;
 }
-#excursion .excursion-box .box-body .body_info span{
+
+#excursion .excursion-box .box-body .body_info span {
     font-size: 15px;
     line-height: 20px;
     color: #ffffff;
     width: 37%;
 }
+
 #excursion .excursion-box .box-body .body-option {
     display: flex;
     align-items: center;
     padding: 25px 0 65px 0;
 }
+
 #excursion .excursion-box .box-body .body-option .item:first-child {
     margin-right: 107px;
 }
+
 #excursion .excursion-box .box-body .body-option .item:nth-child(2) {
     margin-right: 128px;
 }
+
 #excursion .excursion-box .box-body .body-option .item:nth-child(3) {
     margin-right: 60px;
 }
+
 #excursion .excursion-box .box-body .body-option .name {
     font-size: 20px;
     font-family: "BebasNeueBold", sans-serif;
     color: #ffffff;
     letter-spacing: 2px;
 }
+
 #excursion .excursion-box .box-body .body-option .subtitle span {
     font-size: 20px;
-    font-family: "BebasNeueBold",sans-serif;
+    font-family: "BebasNeueBold", sans-serif;
 }
-#excursion .excursion-box .box-body .body-option .subtitle span.second{
+
+#excursion .excursion-box .box-body .body-option .subtitle span.second {
     margin-left: 7px;
 }
+
 #excursion .excursion-box .box-body .body-option .subtitle {
     font-size: 36px;
-    font-family: "BebasNeueBold",sans-serif;
+    font-family: "BebasNeueBold", sans-serif;
     color: #fd227e;
 }
+
 #excursion .excursion-box .box-body .btn-wrap {
     justify-content: center;
     display: flex;
 }
+
 #about-excursion {
     padding: 70px 0 100px 0;
 }
+
 #about-excursion .section-title-wrap {
     margin-bottom: 70px;
 }
+
 #about-excursion .box {
     height: 550px;
     display: flex;
@@ -563,16 +602,19 @@ main {
     overflow: hidden;
     margin-bottom: 20px
 }
+
 #about-excursion .box .title {
     font-size: 40px;
-    font-family: "BebasNeueBold",sans-serif;
+    font-family: "BebasNeueBold", sans-serif;
     color: rgb(41, 46, 67);
     line-height: 1.05;
     transition: 1s ease-out;
 }
-#about-excursion .box:hover .box-hover_text{
+
+#about-excursion .box:hover .box-hover_text {
     opacity: 0.8;
 }
+
 #about-excursion .box .box-hover_text {
     background-color: rgb(40, 49, 90);
     height: 100%;
@@ -586,11 +628,13 @@ main {
     transition: 1s ease-in-out;
 
 }
+
 #about-excursion .box:hover .title {
     opacity: 0;
 }
-#about-excursion .box .box-hover_text p{
-    font-family: "Roboto",sans-serif;
+
+#about-excursion .box .box-hover_text p {
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     color: #ffffff;
     font-size: 14px;
@@ -598,9 +642,11 @@ main {
     margin-bottom: 14px;
     text-align: left;
 }
-#about-excursion .box .box-hover_text p:last-child{
+
+#about-excursion .box .box-hover_text p:last-child {
     margin-bottom: 0;
 }
+
 #about-excursion .second-row .info_text p {
     font-family: "BebasNeueBold", sans-serif;
     font-size: 36px;
@@ -608,12 +654,15 @@ main {
     color: #292e43;
     transition: .4s ease-in;
 }
+
 #about-excursion .second-row .info_text p:hover {
     color: #fd227e;
 }
+
 #about-excursion .second-row {
     margin-top: 82px;
 }
+
 #about-excursion .second-row .info_text:before {
     content: "";
     background-color: rgb(253, 34, 126);
@@ -623,21 +672,25 @@ main {
     width: 5px;
     height: 42px;
 }
+
 .row {
     margin-left: -10px;
     margin-right: -10px;
 }
+
 #about-excursion .second-row .info_text.first-row_col {
     margin-bottom: 94px;
 }
-#about-excursion .second-row .info_text.last:before{
+
+#about-excursion .second-row .info_text.last:before {
     display: none;
 }
+
 #about-excursion .second-row .info_text.last p {
     color: #fd227e;
 }
 
-#about-excursion  .btn-wrap {
+#about-excursion .btn-wrap {
     margin-top: 66px;
     display: flex;
     align-items: center;
@@ -646,8 +699,8 @@ main {
 
 .button {
     border-radius: 6px;
-    background-image: -moz-linear-gradient( -90deg, rgb(248,40,129) 0%, rgb(255,6,110) 51%, rgb(238,6,99) 100%);
-    background-image: -webkit-linear-gradient( -90deg, rgb(248,40,129) 0%, rgb(255,6,110) 51%, rgb(238,6,99) 100%);
+    background-image: -moz-linear-gradient(-90deg, rgb(248, 40, 129) 0%, rgb(255, 6, 110) 51%, rgb(238, 6, 99) 100%);
+    background-image: -webkit-linear-gradient(-90deg, rgb(248, 40, 129) 0%, rgb(255, 6, 110) 51%, rgb(238, 6, 99) 100%);
     width: 212px;
     height: 42px;
     font-size: 17px;
@@ -657,8 +710,9 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: -ms-linear-gradient( -90deg, rgb(248,40,129) 0%, rgb(255,6,110) 51%, rgb(238,6,99) 100%);
+    background-image: -ms-linear-gradient(-90deg, rgb(248, 40, 129) 0%, rgb(255, 6, 110) 51%, rgb(238, 6, 99) 100%);
 }
+
 .button:hover, .button:focus {
     background: #d50656;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #d50656), to(#f82880));
@@ -666,14 +720,17 @@ main {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d50656', endColorstr='#f82880', GradientType=0);
     color: #fff;
 }
+
 #exclusive {
     padding-bottom: 115px;
 }
+
 #exclusive .exclusive-box {
-    background: url("../images/vip.png")no-repeat center ;
+    background: url("../images/vip.png") no-repeat center;
     background-size: cover;
     padding: 50px 41px 36px 41px;
 }
+
 #exclusive .exclusive-box .title {
     font-size: 40px;
     line-height: 42px;
@@ -681,24 +738,29 @@ main {
     font-family: "BebasNeueBold", sans-serif;
     margin-bottom: 22px;
 }
-#exclusive .exclusive-box  .subtitle {
+
+#exclusive .exclusive-box .subtitle {
     font-size: 14px;
     line-height: 20px;
     color: #ffffff;
     font-weight: 700;
 }
+
 #exclusive .exclusive-box .btn-wrap {
     justify-content: flex-start;
 }
+
 #exclusive .exclusive-box .btn-wrap .button {
     margin-top: 183px;
 }
+
 #exclusive .info_box {
     padding: 50px 30px 0 37px;
     background: #f7f7fa;
     height: 100%;
     width: 100%;
 }
+
 #exclusive .info_box .title {
     font-size: 40px;
     line-height: 42px;
@@ -706,6 +768,7 @@ main {
     font-family: "BebasNeueBold", sans-serif;
     margin-bottom: 36px;
 }
+
 #exclusive .info_box .option .item {
     display: flex;
     align-items: baseline;
@@ -713,9 +776,11 @@ main {
     margin-bottom: 20px;
     width: 100%;
 }
+
 #exclusive .info_box .option .item .img {
     width: 19%;
 }
+
 #exclusive .info_box .option .item .name {
     font-family: "BebasNeueBold", sans-serif;
     color: #fd227e;
@@ -723,67 +788,76 @@ main {
     line-height: 30px;
     width: 22%;
 }
-#exclusive .info_box .option .item  .second_text {
+
+#exclusive .info_box .option .item .second_text {
     font-size: 14px;
     color: #292e43;
     line-height: 20px;
     font-weight: 700;
     width: 58%;
 }
+
 #excursion .excursion-box .box-body .body-option .item.last br {
-    display:none;
+    display: none;
 }
+
 #about-excursion .slick-dots li.slick-active button:before {
     opacity: .75;
     color: rgb(253, 34, 126);
 }
+
 #about-excursion .slick-dots li button:before {
     width: 6px;
     height: 6px;
 }
+
 #about-excursion .slick-dots li {
     position: relative;
     display: inline-block;
     width: 6px;
     height: 6px;
 }
+
 #about-excursion .slick-dots {
     position: absolute;
     bottom: -24px;
 }
-#exclusive .info_box .option .item .img.first img
-{
+
+#exclusive .info_box .option .item .img.first img {
     width: 40px;
     height: 55px;
     margin-left: 9px
 }
-#exclusive .info_box .option .item .img.second img
-{
+
+#exclusive .info_box .option .item .img.second img {
     width: 41px;
     height: 34px;
     margin-left: 9px
 }
-#exclusive .info_box .option .item .img.third img
-{
+
+#exclusive .info_box .option .item .img.third img {
     width: 62px;
     height: 70px
 }
+
 .headline {
     text-align: center;
     margin-bottom: 20px;
     color: #282E44;
 }
-.headline span  {
+
+.headline span {
     display: inline-block;
     vertical-align: top;
     position: relative;
     padding: 0 60px;
-    font-family: 'BebasNeueBold',sans-serif;
+    font-family: 'BebasNeueBold', sans-serif;
     text-transform: uppercase;
     font-size: 27px;
     line-height: 27px;
     color: #586172;
 }
+
 .headline span:before, .headline span:after {
     content: "";
     position: absolute;
@@ -792,21 +866,26 @@ main {
     height: 1px;
     background: #292D46;
 }
+
 .headline span:after, .headline a.a_head_span:after {
     right: 0;
 }
+
 .headline span:before, .headline a.a_head_span:before {
     left: 0;
 }
+
 .headline p {
     margin-bottom: 0;
     text-align: center;
     color: #ABABAB;
 }
+
 .headline p a {
     color: #FF006A;
     text-decoration: underline;
 }
+
 .slider-container {
     overflow: hidden;
     position: relative;
@@ -831,10 +910,12 @@ main {
 .slider-container .slick-arrow.slick-next {
     right: 5px;
 }
+
 .slick-arrow.slick-next:after {
     right: 2px;
     background-position: -27px 0;
 }
+
 .slick-arrow {
     position: absolute;
     z-index: 10;
@@ -848,6 +929,7 @@ main {
     text-indent: -9999px;
     overflow: hidden;
 }
+
 .comments .slick-list {
     width: 100%;
 }
@@ -967,7 +1049,7 @@ main {
     text-align: justify;
 }
 
-@media (max-width:620px) {
+@media (max-width: 620px) {
     .footer-about-text {
         text-align: left;
     }
