--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ main {
     width: 100%;
     height: 440px;
     padding: 246px 0 26px 0;
-    background-image: url("../images/img1.png");
+    background: url("../images/img1.png")no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
