--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,14 +125,13 @@ main {
     width: 100%;
     height: 440px;
     padding: 246px 0 26px 0;
-    background: url("../images/img1.png")no-repeat;
+    background: url("../images/img1.png")no-repeat fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    background-attachment: fixed;
 }
 .parallax {
     background-attachment: scroll;
